src/components/_popouts.scss
/* ... */
// Reaction button for forum channels
button#reaction-picker-tab div[class^="contents"] {
  color: $crust;
}

div[class*="keyboardShortcutsModal_"] {
  background-color: $mantle !important;

  div[class^="keybindShortcut"] span[class^="key"] {
    color: $crust;

    svg g {
      fill: $crust !important;
    }
  }
}

div[class^="planOptionClickableContainer"] {
  div[class^="checkbox"][class*="checked"] svg path {
    fill: $crust !important;
  }

  span[class*="planOptionDiscount_"] {
    color: $crust !important;
  }
}

// Search bar calendar
.react-datepicker,
.react-datepicker__header {
  background-color: $mantle !important;
}
.react-datepicker__day {
  background-color: $crust !important;
}
.react-datepicker__day:active {
  background: $brand !important;
}
.react-datepicker__day--selected:after {
  background-color: $blue !important;
}
[class^="datePickerHint"] [class^="hintValue"] {
  color: $crust !important;
}

div[class*="layerContainer_"] {
  div[class^="control"] {
    div[class*="checked_"] {
      background-color: $green !important;
    }
    div[style*="background-color: rgb(114, 118, 125);"] {
      background-color: $surface2 !important;
    }
  }
}

div[class*="layerContainer_"] {
  div[class*="guildPopout_"][role="dialog"] {
    background-color: $base;

    div[class*="guildName_"] {
      color: $text;
    }
  }
}

div[class*="layerContainer_"] [role*="dialog"] {
  a[class*="downloadLink_"] {
    color: $overlay1 !important;
    opacity: 1;
    &:hover {
      color: $text !important;
    }
  }
}
/* ... */

